手機模式的 calc 工作表工具列只需要新增按鈕即可， 因為工作表可滑動選取，不需要上下頁按鈕

--- a/loleaflet/css/spreadsheet.css
+++ b/loleaflet/css/spreadsheet.css
@@ -27,6 +27,11 @@
 	bottom: 0px;
 }
 
+.spreadsheet-tabs-container.mobile-edit {
+	left: 32px;
+}
+
+
 .spreadsheet-tab-scroll {
 	width: 100%;
 	height: 100%;
