手機模式操作功能新增及更新： 1. 自動切換全螢幕。 2. 新增剪下、複製、貼上、全選、刪除的工具列。 3. 搜尋工具列與第二工具列共同一位置，避免螢幕塞太多工具列。 4. 其他手機操作模式修正。

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -90,7 +90,7 @@ body {
         width: 56px;
         height: 56px;
         right: 16px;
-        bottom: 16px;
+        bottom: 32px;
         background-color: rgba(255, 128, 0, 0.5);
         border-radius: 50%;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -98,7 +98,7 @@ body {
 }
 
 #mobile-edit-button.spreadsheet {
-	bottom: 53px;
+	bottom: 68px;
 }
 
 #mobile-edit-button-icon {
@@ -135,6 +135,9 @@ body {
     #document-container.spreadsheet-document.readonly {
 	top: 61px !important;
     }
+    #document-container.spreadsheet-document.mobile-edit {
+	top: 143px !important;
+    }
     #document-container {
 	top: 41px;
     }
@@ -143,6 +146,9 @@ body {
     }
     #spreadsheet-row-column-frame.readonly {
 	top: 41px !important;
+    }
+    #spreadsheet-row-column-frame.mobile-edit {
+	top: 123px !important;
     }
 /*
     #toolbar-hamburger {
