--- a/loleaflet/css/images.css
+++ b/loleaflet/css/images.css
@@ -383,3 +383,4 @@
 .movepage{ background: url('images/lc_movepage.svg') no-repeat center/contain !important;}
 .linenumberdialog{background: url('images/lc_linenumberdialog.svg') no-repeat center/contain !important;}
 .textbox{ background: url('images/lc_text.svg') no-repeat center/contain !important;}
+.gotopage{ background: url('images/lc_gotopage.svg') no-repeat center/contain !important;}
