Writer 「插入」選單新增： 目次與索引  1.索引條目 2.參考文獻條目 3.目次、索引或參考文獻

--- a/loleaflet/css/images.css
+++ b/loleaflet/css/images.css
@@ -384,3 +384,6 @@
 .linenumberdialog{background: url('images/lc_linenumberdialog.svg') no-repeat center/contain !important;}
 .textbox{ background: url('images/lc_text.svg') no-repeat center/contain !important;}
 .gotopage{ background: url('images/lc_gotopage.svg') no-repeat center/contain !important;}
+.insertindexesentry{ background: url('images/lc_insertindexesentry.svg') no-repeat center/contain !important;}
+.insertauthoritiesentry{ background: url('images/lc_insertauthoritiesentry.svg') no-repeat center/contain !important;}
+.insertmultiindex{ background: url('images/lc_insertmultiindex.svg') no-repeat center/contain !important;}
