修正 item 和過長的 hot key 重疊的問題

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -367,6 +367,9 @@ body {
 .context-menu-icon-lo-checkmark:before {
 	content: '\2713';
 }
+.context-menu-separator {
+    margin: .35em 0 0.35em 44px !important;
+}
 
 .loleaflet-annotation {
 	position: absolute;
