--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -74,10 +74,7 @@
     font-size:12px;
     font-family:"Lucida Sans Unicode", "Lucida Sans", "Lucida Grande", Arial, sans
 serif;
-    margin-left: 12px;
     position: absolute;
-    text-align: right;
-    width: 150px;
     right: 13px;
     display: inline-block;
 }
@@ -153,8 +150,14 @@ serif;
 
 /* Menu Item */
 .lo-menu a, .lo-menu a:hover, .lo-menu a:focus, .lo-menu a:active, .lo-menu a.highlighted {
-    padding: 5px 104px 5px 48px; /* ICON */
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 48px;/* ICON */
+    padding-right: 24px;
     color: #000;
+}
+.item-has-hotkey {
+    padding-right: 132px !important;
 }
 .lo-menu a:hover, .lo-menu a:focus, .lo-menu a:active, .lo-menu a.highlighted {
     background: #538ecd;
@@ -195,7 +198,7 @@ serif;
 }
 .lo-menu a.separator {
     height: 1px;
-    margin: 4px 0;
+    margin: 4px 0px 4px 44px;
     overflow: hidden;
     padding-top: 0;
     padding-bottom: 0;
