Sidebar Shadow Section alignment
Endable checkbox use flex-start
Transparancy label and spinfieldcontainer are vertical aligned

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I49cfdf4b3b508b7f178d76a4c5e61c4b21fdf2bb

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -104,6 +104,21 @@
 	justify-content: flex-end;
 }
 
+#ShadowPropertyPanel div#table-grid3 table#grid3 td:nth-child(1) {
+	justify-content: flex-start;
+}
+
+#FIELD_TRANSPARENCY {
+	height: 0;
+	position: relative;
+	bottom: 22px;
+}
+
+#transparency_label {
+	position: relative;
+	top: 12px;
+}
+
 #table-box4.sidebar.jsdialog.vertical {
 	width: auto;
 }
