RTL: fix about dialog
Signed-off-by: Szymon Kłos <szymon.klos@collabora.com>
Change-Id: Ie78a5d6e44fe1e2a8f132f070cb114813c1038a7

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -982,7 +982,7 @@ nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-cou
 }
 #about-dialog-info-container {
 	align-items: center;
-	justify-content: left;
+	justify-content: flex-start;
 	flex-grow: 1;
 }
 #about-dialog-info {
