--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -274,7 +274,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 
 #mobile-edit-button-image {
 	position: relative;
-	left: 16px;
+	margin-inline-start: 16px;
 	top: 16px;
 	width: 24px;
 	height: 24px;
