--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -1,5 +1,16 @@
 /* CSS specific for mobile phones. */
 
+/* RTL on mobile */
+html[dir='rtl'] .w2ui-icon.closemobile,
+html[dir='rtl'] #toolbar-hamburger.menuwizard-opened,
+html[dir='rtl'] .mobile-wizard-back {
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+}
+html[dir='rtl'] .sub-menu-arrow {
+	transform: rotate(0deg);
+	background-position: right;
+}
 /* Related to editor.css */
 #editor-btn{
 	max-width: 160px;
