RTL: fix spinfield units in sidebar
Signed-off-by: Szymon Kłos <szymon.klos@collabora.com>
Change-Id: I8e59826fec92f3a4f70000c5b56ea6c946d4b292

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -24,9 +24,9 @@
 	border: 1px solid var(--gray-color);
 	border-radius: var(--border-radius);
 	height: 28px;
-	padding-left: 4px;
+	padding-inline-start: 4px;
 	position: relative;
-	left: 8px;
+	margin-inline-start: 8px;
 }
 
 .sidebar.spinfield {
@@ -45,7 +45,7 @@
 	color: var(--gray-light-txt--color);
 	margin: 5px;
 	position: relative;
-	right: 40px;
+	margin-inline-start: calc(-40px);
 }
 
 .sidebar.ui-listbox {
