Document Header: remove unnecessary CSS important
Introduced in 6adc772fefed1ff941727acd2540f77578276338 , bg does not
need !important to take effect moreover including it might impact user's
own theme of customization etc

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I27caa7708881ace0b12fd86c61fe75417bf6cdc8

--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -82,7 +82,7 @@
 /* Document Logo */
 .main-nav.hasnotebookbar #document-header {
 	height: 100%;
-	background: transparent !important;
+	background: transparent;
 	align-items: center;
 	display: flex;
 }
