--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -17,7 +17,7 @@
 #document-header {
 	position: relative;
 	background: transparent;
-	margin-right: 5px;
+	margin-inline-end: 5px;
 }
 /*avoid multiple document-headers in readonly mode*/
 .main-nav.hasnotebookbar.readonly > #main-menu #document-header {
