Sidebar: Fix menubutton and listbox sizes
by making sure we account for border size etc

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I46f83557a8300709841757e83c589c6e78a5b740

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -58,8 +58,11 @@
 .sidebar.jsdialog.menubutton {
 	padding: 4px 10px;
 }
-.sidebar.jsdialog.ui-listbox {
-	width: 121px;
+.sidebar.jsdialog.ui-listbox,
+.sidebar.jsdialog.menubutton {
+	min-width: 121px;
+	max-width: 121px;
+	box-sizing: border-box;
 }
 
 .menubutton.sidebar span {
