Toolbars use var(--color-main-background) and var(--color-border)
You can simple modify the background colors of the toolbars
for now NB and bottom toolbar
You can edit the borders and separators with --color-border
so it's very easy to remove focus for separators

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I661513031eb231d6ffc5036df38381d7fdcac5a7

--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -233,10 +233,9 @@
 }
 
 #toolbar-wrapper.hasnotebookbar {
-	background: var(--white-bg-color);
+	background: var(--color-main-background);
 	position: relative;
 	z-index: 11;
-	background-color: white;
 }
 
 .cell.notebookbar {
