--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -10,6 +10,9 @@
 	--gray-color: #b6b6b6;
 	--white-bg-color: #fff;
 
+	--color-main-background: #fff;
+	--color-border: #b6b6b6;
+
 	--border-radius: 4px;
 
 	/*
