Status bar: search: move inline styles to CSS file
Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I3165ed4ce504845a0dd9e3876b03260766d63a75

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -293,6 +293,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	font-family: var(--oxool-font) !important;
 	font-size: 12px !important;
 	font-weight: normal !important;
+	padding: 3px 5px 4px 10px;
 }
 
 .oxool-character {
