--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -352,7 +352,7 @@
 	margin-inline-end: 5px !important;
 	text-align: center;
 }
-.unotoolbutton.notebookbar.has-label > *{ /*so they stay side by side*/
+#zoomreset, .unotoolbutton.notebookbar.has-label > *{ /*so they stay side by side*/
 	display: table-cell;
 }
 
