--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -304,6 +304,12 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 #search-input {
 	height: 22px;
 }
+#search-input:hover {
+	border: 1px solid var(--color-border-darker) !important;
+}
+#search-input::placeholder {
+	color: var(--color-main-text);
+}
 
 .oxool-character {
 	table-layout: fixed;
