Sidebar fix Style and Character dropdown dialog width
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I6df2656c215d85fe31907fa73e063b45ef8522f5

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -85,7 +85,7 @@
 
 #fontnamecombobox > .sidebar.jsdialog.ui-listbox,
 #applystyle > .sidebar.jsdialog.ui-listbox {
-	width: 172px;
+	min-width: 186px;
 }
 
 #gradientstyle > .sidebar.jsdialog.ui-listbox {
@@ -101,7 +101,7 @@
 }
 
 #fontsizecombobox > .sidebar.jsdialog.ui-listbox {
-	width: 86px;
+	min-width: 86px;
 }
 
 .sidebar.ui-expander {
