Sidebar: Add missing padding to Table style
Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Iee62a80513d62b7577e62381ec1634455ab8079a

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -88,6 +88,10 @@
 	min-width: 186px;
 }
 
+#table-style {
+	padding-left: 4px;
+}
+
 #gradientstyle > .sidebar.jsdialog.ui-listbox {
 	width: 74px;
 }
