Color-palette remove non needed var's
remove --color-text-accent
with   --color-text-darker
cause the accent color was used for select or hover

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Ifbba9337b70aa0970e0b6654c482ca830e8ce066

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -73,7 +73,7 @@
 
 td.jsdialog:hover *,
 #table-box3:hover p {
-	color: var(--color-text-accent);
+	color: var(--color-text-darker);
 }
 
 .jsdialog.row {
