Color-palette remove --white-bg-color
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I72bdb8fbe12531097f27dd7bc4479cb2c9ebe4de

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -114,7 +114,7 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 	display: inline-flex;
 	width: 100%;
 	background: white;
-	background: var(--white-bg-color);
+	background: var(--color-main-background);
 }
 
 .jsdialog-tabs:empty {
