Dialog style update
bottom buttons are better align with
buttons get hover effect with correct color vars
display: flex; and justify-content: space-between;
dialog get a border and a box-shadow
widget-header use --color-background-darker colors

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I1e77434b1d4fc166a22a9774bb3168852456d3d3

--- a/loleaflet/css/infobar.css
+++ b/loleaflet/css/infobar.css
@@ -16,3 +16,12 @@
 	height: 42px;
 	border: none;
 }
+
+.ui-widget-header {
+	background: var(--color-background-darker);
+	border: none;
+	color: var(--color-text-darker);
+}
+.ui-widget-content {
+	color: var(--color-main-text);
+}
