Toolbar color update
In status-readonly-mode the element on the down toolbar
use --color-warning background color and --border-radius

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I55782f5632f55f5923d53ec9a03628e048fa45da

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -51,8 +51,9 @@
 }
 #InsertMode.insert-mode-false,
 #PermissionMode.status-readonly-mode {
-	background-color: var(--gray-light-txt--color);
+	background-color: var(--color-warning);
 	color: white;
+	border-radius: var(--border-radius);
 }
 #tb_actionbar_item_zoom .w2ui-tb-caption{
 	min-width: 43px;
