Document-signing-bar use var(--color-error)
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I59fe9a18ccb312452745bf8bdd3de35b4c3261f9

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -62,7 +62,7 @@
 	content: '%';
 }
 #document-signing-bar {
-	background-color: #ef324e;
+	background-color: var(--color-error);
 }
 
 #toolbar-search {
