toolbar-search border use --color-border
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I9a5058b73a0c695078098d6d5fb5c48ad6534016

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -73,7 +73,7 @@
 	position: fixed;
 	bottom: 0;
 	z-index: 1000;
-	border-top: 1px solid #bbbbbb;
+	border-top: 1px solid var(--color-border);
 }
 
 #tb_actionbar_item_prev .w2ui-icon.prev {
