sidebar width is 330px and duplicate borders removed
The sidebar width is 330px and not 322px.
330px is the default width with 322px the sidebar width is smaler
than needed which causes issues of symetry AND issues when
there is an additional scrallbar needed.

Top borders at the sidebar's were removed
cause there is already an border at the top toolbar.

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I6c53132b273a2b83fd89c58778577e1b47cda125

--- a/loleaflet/css/impress-mobile.css
+++ b/loleaflet/css/impress-mobile.css
@@ -2,3 +2,7 @@
 	background-color: #c2d5ed;
 	box-shadow: inset 0px 0px 5px 0px #4a96d3;
 }
+
+#presentation-controls-wrapper {
+	border-top: 1px solid var(--color-border) !important;
+}
