--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -77,7 +77,7 @@
 	background-position: center top;
 	background-size: 14px 1px;
 	background-repeat: repeat-x;
-	box-shadow: inset 0 34px 0 0 white;
+	box-shadow: inset 0 1px 0 0 var(--color-border-lighter);
 }
 
 td.jsdialog:hover *,
