Menubar use var for background-color at dropdown menues from the menubar
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I82565cd811bc4b0b71c39670a88e0fe21fa91d70

--- a/loleaflet/css/override-smartmenus.css
+++ b/loleaflet/css/override-smartmenus.css
@@ -3,7 +3,7 @@
 	.sm-simple ul {
 		position: absolute;
 		width: 12em;
-		background: white;
+		background: var(--color-main-background);
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	}
 
