--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -27,7 +27,7 @@
 	padding-inline-start: 4px;
 	position: relative;
 	margin-inline-start: 8px;
-	color: var(--color-main-text);
+	color: var(--color-text-dark);
 	background-color: var(--color-background-dark);
 }
 
@@ -46,7 +46,7 @@
 
 .spinfieldunit {
 	font-size: 12px;
-	color: var(--color-main-text);
+	color: var(--color-text-dark);
 	margin: 5px;
 	position: relative;
 	margin-inline-start: calc(-40px);
