--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -94,8 +94,16 @@ w2ui-toolbar {
 }
 .w2ui-toolbar table.w2ui-button .w2ui-tb-down > div,
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
-	border-top: 5px solid var(--color-main-text);
+	border-top: 5px solid var(--color-text-dark);
 }
+
+.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
+	border-color: transparent transparent var(--color-text-dark) transparent;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+	border-color: var(--color-text-dark) transparent transparent transparent;
+}
+
 #toolbar-down .ToolbarStatusInactive {
 	color: var(--color-text-lighter);
 	box-shadow: inset 0px 0px 0px 10px #f2f2f2, 0px 0px 0px 2px #f2f2f2, 4px 0px 0px 1px #fff, -4px 0px 0px 1px #fff, 0px 0px 0px 5px #fff;
