fix comment reply is too wide when the content is big enough
Signed-off-by: Mert Tumer <mert.tumer@collabora.com>
Change-Id: I03693f67c69d108ef3dcbf5cc9cd0127bd37b5a3

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -489,8 +489,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 
 .annotation-active.modify-annotation-container .oxool-annotation-content-wrapper,
 .annotation-active.reply-annotation-container .oxool-annotation-content-wrapper {
-	min-width: 240px;
-	width: auto;
+	width: 240px;
 }
 
 .oxool-annotation-content {
