NB: Smartmenus: Do not set z-index
Make sure the default position (relative) and z-index (9999) are not set
for new Language dropdown (unotoolbutton), otherwise it will always be
on top of everything

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I1ea3ba4d521a5caffb499473554fc4e5cfd336b8

--- a/loleaflet/css/override-smartmenus.css
+++ b/loleaflet/css/override-smartmenus.css
@@ -1,3 +1,7 @@
+.sm.notebookbar {
+	position: static !important;
+}
+
 @media (min-width: 500px) {
 	/* Switch to desktop layout */
 	.sm-simple ul {
