--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -173,6 +173,11 @@
 	width: auto;
 }
 
+#masterslidebutton {
+	line-height: 22px;
+	min-width: 121px;
+}
+
 div#negativenumbersred.checkbutton.jsdialog.sidebar,
 div#thousandseparator.checkbutton.jsdialog.sidebar {
 	height: 24px;
