--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -28,6 +28,7 @@
 	height: 32px;
 	line-height: 0em;
 	color: var(--color-main-text);
+	font-size: var(--default-font-size);
 	min-width: 62px;
 	background-color: var(--color-background-dark);
 	border: 1px solid var(--color-border);
