--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -47,7 +47,7 @@
 .jsdialog.vertical p, .ui-frame-label {
 	margin: 0px;
 	color: var(--color-main-text);
-	font-size: 10px;
+	font-size: calc(var(--default-font-size)*0.9);
 	font-weight: bold;
 	text-transform: uppercase;
 }
@@ -131,7 +131,7 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 
 .ui-tab.jsdialog {
 	float: left;
-	font-size: 12pt;
+	font-size: var(--default-font-size);
 	font-family: var(--oxool-font);
 	line-height: normal;
 	color: dimgray;
@@ -351,6 +351,7 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 .jsdialog.checkbutton input,
 .jsdialog.checkbutton label {
 	vertical-align: middle;
+	font-size: var(--default-font-size);
 }
 
 .jsdialog.checkbutton label {
@@ -398,7 +399,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 	min-width: 100px;
 	height: 32px;
 	line-height: normal;
-	font-size: 14px;
+	font-size: calc(var(--default-font-size)*1.2);
 	font-family: var(--oxool-font);
 	border: 1px solid #CCC;
 	border-radius: 3px;
@@ -706,7 +707,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 	margin-right: -11px;
 	color: var(--color-border-darker);
 	content: '\23F5';
-	font-size: 16px;
+	font-size: calc(var(--default-font-size)*1.3);
 }
 
 #MacroSelectorDialog #categories .ui-treeview-entry {
@@ -780,7 +781,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 /* menu button */
 .jsdialog.menubutton {
 	line-height: normal;
-	font-size: 14px;
+	font-size: calc(var(--default-font-size)*1.2);
 	font-family: var(--oxool-font);
 	border: 1px solid var(--color-border-dark);
 	border-radius: var(--border-radius);
@@ -1040,7 +1041,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 #mobile-wizard.popup.snackbar #label-no-action,
 .snackbar.jsdialog-container #label-no-action {
 	color: white !important;
-	font-size: 14px !important;
+	font-size: calc(var(--default-font-size)*1.2) !important;
 	margin: 0px !important;
 	border-bottom: none !important;
 	padding-left: 12px;
