Toolbar Statusbar PermissionMode Text use color-primary-text
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Ica4d03e18a018fcdc1173d11ebfc0798973db779

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -51,7 +51,7 @@
 #InsertMode.insert-mode-false,
 #PermissionMode.status-readonly-mode {
 	background-color: var(--color-warning);
-	color: white;
+	color: var(--color-primary-text);
 	border-radius: var(--border-radius);
 }
 #tb_actionbar_item_zoom .w2ui-tb-caption{
