--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -98,7 +98,7 @@ w2ui-toolbar {
 }
 #toolbar-down .ToolbarStatusInactive {
 	color: var(--color-text-lighter);
-	box-shadow: inset 0px 0px 0px 10px #f2f2f2, 0px 0px 0px 2px #f2f2f2, 4px 0px 0px 1px #fff, -4px 0px 0px 1px #fff, 0px 0px 0px 5px #fff;
+	box-shadow: inset 0px 0px 0px 10px var(--color-background-dark), 0px 0px 0px 2px var(--color-background-dark), 4px 0px 0px 1px var(--color-background-lighter), -4px 0px 0px 1px #fff, 0px 0px 0px 5px var(--color-background-lighter);
 }
 .w2ui-overlay .menu {
 	overflow: hidden auto;
