Add Color Scheme Var's
to dialog, popup widgets

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I8f0170b181f88ed8e4b3f1b9a4303a9f21ab0083

--- a/loleaflet/css/infobar.css
+++ b/loleaflet/css/infobar.css
@@ -19,8 +19,9 @@
 
 .ui-widget-header {
 	background: var(--color-background-darker);
-	border: none;
+	border: var(--color-border-darker);
 	color: var(--color-text-darker);
+	border-radius: var(--border-radius);
 }
 .ui-widget-content {
 	color: var(--color-main-text);
