--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -301,6 +301,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	font-size: var(--default-font-size) !important;
 	font-weight: normal !important;
 	padding: 3px 5px 3px 3px;
+	color: var(--color-main-text);
 }
 
 #search-input {
@@ -817,12 +818,13 @@ nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-cou
 }
 
 .lokdialog_container.ui-dialog.ui-widget-content.jsdialog-container {
-	background: white !important;
+	background: var(--color-background-darker) !important;
 }
 
 .lokdialog.ui-dialog-content.ui-widget-content {
 	padding: 0px;
 	overflow: auto;
+	border-radius: calc(var(--border-radius)/2);
 }
 
 .lokdialog_canvas {
